[project]
name = "agservice-storage"
version = "0.1.0"
description = "storage service for agdev"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "boto3",
    "fastapi",
    "uvicorn",
    "requests",
    "httpx",
    "sqlmodel",
    "psycopg2-binary",
    "uuid6",
    "agpyutils @ git+https://github.com/iwaag/agpyutils.git",
]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
